# pythonic-cv

./: .gitignore  LICENSE  MANIFEST.in  README.md  names.txt  pcv.py  setup.cfg  setup.py  something_fishy.py
pcv/: something_fishy.py  source.py  vidIO.py
pcv/examples/: cam_video_switch.py  something_fishy.py
pythonic_cv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pcv/: interact.py  process.py  screen.py  vidIO.py
src/pcv/examples/: hand_write.py  stitching_advanced.py
