[metadata]
name = pythonic-cv
version = 1.1.9
author = ES-Alexander
author_email = sandman.esalexander@gmail.com
description = Performant pythonic wrapper of unnecessarily painful opencv functionality
long_description = file: README.md
url = https://github.com/ES-Alexander/pythonic-cv
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pcv
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pcv